updated config.yml to try and get permalinks working correctly

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,7 +9,8 @@
       {% assign pages = site.pages | sort: "menuorder" %}
       {% for p in pages %}
         {% if p.menutitle %}
-        <li><a href="{{ p.path | prepend: site.baseurl }}" class="menu-link{% if p.url == page.url %} active{% endif %}">{{ p.menutitle }}</a></li>
+        <!-- {{ p.url }} -->
+        <li><a href="{{ p.url | prepend: site.baseurl }}" class="menu-link{% if p.url == page.url %} active{% endif %}">{{ p.menutitle }}</a></li>
         {% endif %}
       {% endfor %}
       </ul>
