--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 <script type='text/javascript' src="{{ "/js/vendor/jquery.onepage-scroll.min.js" | prepend: site.baseurl }}" ></script>
 <script type='text/javascript' src="{{ "/js/vendor/covervid.min.js" | prepend: site.baseurl }}"></script>
 <script type='text/javascript' src="{{ "/js/vendor/jquery.parallax.min.js" | prepend: site.baseurl }}"></script>
+<script type='text/javascript' src="{{ "/js/vendor/jquery.mixitup.min.js" | prepend: site.baseurl }}"></script>
 <script type='text/javascript' src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 <!-- init pjax/prefetching plugin: -->
 <script type='text/javascript' src="{{ "/js/vendor/instantclick.min.js" | prepend: site.baseurl }}" data-no-instant></script>
