fixed broken home link when not viewing site at root of domain

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 <header id="page-header">
   <div id="hd-inner" class="max-1200">
-    <a href="/" id="menu-bar-logo">
+    <a href="{{ "/" | prepend: site.baseurl }}" id="menu-bar-logo">
       <object type="image/svg+xml" data="{{ "/img/logo.svg" | prepend: site.baseurl }}" class="menu-logo">
         Media Suite Logo <!-- fallback image in CSS -->
       </object>
