--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
     {% include header.html %}
 
-    <div id="container">
+    <div id="container"{% if(page.ishome) %} class="home-page-container" {% endif %}>
 
       {{ content }}
 
