--- a/_includes/value-wheel.html
+++ b/_includes/value-wheel.html
@@ -1,5 +1,4 @@
-<svg version="1.1" class="value-wheel rotate" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 258.4 245.6" style="enable-background:new 0 0 258.4 245.6;" xml:space="preserve">
+<svg version="1.1" class="value-wheel rotate" viewBox="0 0 258 245" preserveAspectRatio>
 <style type="text/css">
   .st0{clip-path:url(#XMLID_7_);fill:url(#SVGID_1_);}
   .st1{opacity:0.2;clip-path:url(#XMLID_7_);fill:url(#SVGID_2_);}
