--- a/_includes/other-case-studies.html
+++ b/_includes/other-case-studies.html
@@ -2,13 +2,14 @@
 
   {% if page.casestudyid != 1 %}
   <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-marlborough-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" />
+    <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
+      <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough Cruise Guide</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Forward Works Planner</a></h2>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Land Information New Zealand</a></h3><br>
+        <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
       </div>
     </div> <!-- .item-text -->
   </div> <!-- .case-study-item -->
@@ -16,13 +17,14 @@
 
   {% if page.casestudyid != 2 %}
   <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" />
+    <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-image">
+      <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3>
+        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3><br>
+        <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
       </div>
     </div> <!-- .item-text -->
   </div> <!-- .case-study-item -->
@@ -30,55 +32,14 @@
 
   {% if page.casestudyid != 3 %}
   <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" />
-    </a>
-    <div class="item-text">
-      <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Forward Works Planner</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Land Information New Zealand</a></h3>
-      </div>
-    </div> <!-- .item-text -->
-  </div> <!-- .case-study-item -->
-  {% endif %}
-
-  {% if page.casestudyid != 4 %}
-  <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" />
-    </a>
-    <div class="item-text">
-      <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3>
-      </div>
-    </div> <!-- .item-text -->
-  </div> <!-- .case-study-item -->
-  {% endif %}
-
-  {% if page.casestudyid != 5 %}
-  <div class="case-study-item clearfix">
     <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-image">
       <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
         <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">TMP for Christchurch</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council / NZTA</a></h3>
-      </div>
-    </div> <!-- .item-text -->
-  </div> <!-- .case-study-item -->
-  {% endif %}
-
-  {% if page.casestudyid != 6 %}
-  <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-listed-land-use-register.png" | prepend: site.baseurl }}" alt="" />
-    </a>
-    <div class="item-text">
-      <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Listed Land Use Register</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council / NZTA</a></h3><br>
+        <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
       </div>
     </div> <!-- .item-text -->
   </div> <!-- .case-study-item -->
