--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <script type='text/javascript' src="{{ "/js/vendor/rem.min.js" | prepend: site.baseurl }}"></script>
 <script type='text/javascript' src="{{ "/js/vendor/imgLiquid-min.js" | prepend: site.baseurl }}"></script>
-<script type='text/javascript' src="{{ "/js/vendor/jquery.onepage-scroll.min.js" | prepend: site.baseurl }}" ></script>
 <script type='text/javascript' src="{{ "/js/vendor/covervid.min.js" | prepend: site.baseurl }}"></script>
 <script type='text/javascript' src="{{ "/js/vendor/jquery.parallax.min.js" | prepend: site.baseurl }}"></script>
+<script type='text/javascript' src="{{ "/js/vendor/jquery.waypoints.min.js" | prepend: site.baseurl }}"></script>
 <script type='text/javascript' src="{{ "/js/vendor/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}"></script>
-<script type='text/javascript' src="{{ "/js/vendor/isotope.pkgd.js" | prepend: site.baseurl }}" data-no-instant></script>
+<script type='text/javascript' src="{{ "/js/vendor/isotope.pkgd.min.js" | prepend: site.baseurl }}" data-no-instant></script>
 <script type='text/javascript' src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 <!-- init pjax/prefetching plugin: -->
 <script type='text/javascript' src="{{ "/js/vendor/instantclick.min.js" | prepend: site.baseurl }}" data-no-instant></script>
