Added TFC case study

--- a/_includes/other-case-studies.html
+++ b/_includes/other-case-studies.html
@@ -2,8 +2,23 @@
 
   {% if page.casestudyid != 1 %}
   <div class="case-study-item clearfix">
+    <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
+      <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
+    </a>
+    <div class="item-text">
+      <div class="item-text-head">
+        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3><br>
+        <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+      </div>
+    </div> <!-- .item-text -->
+  </div> <!-- .case-study-item -->
+  {% endif %}
+
+  {% if page.casestudyid != 2 %}
+  <div class="case-study-item clearfix">
     <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" />
+      <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
@@ -15,10 +30,10 @@
   </div> <!-- .case-study-item -->
   {% endif %}
 
-  {% if page.casestudyid != 2 %}
+  {% if page.casestudyid != 3 %}
   <div class="case-study-item clearfix">
     <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" />
+      <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
@@ -30,10 +45,10 @@
   </div> <!-- .case-study-item -->
   {% endif %}
 
-  {% if page.casestudyid != 3 %}
+  {% if page.casestudyid != 4 %}
   <div class="case-study-item clearfix">
     <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" />
+      <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
