--- a/_includes/value-wheel.html
+++ b/_includes/value-wheel.html
@@ -1,4 +1,5 @@
-<svg version="1.1" class="value-wheel rotate" viewBox="0 0 258 245" preserveAspectRatio>
+<!-- <svg id="value-wheel" version="1.1" class="value-wheel" viewBox="0 0 258 245" preserveAspectRatio> -->
+<svg id="value-wheel" version="1.1" class="value-wheel rotate hoverable" viewBox="0 0 258 245" preserveAspectRatio>
 <style type="text/css">
   .st0{clip-path:url(#XMLID_7_);fill:url(#SVGID_1_);}
   .st1{opacity:0.2;clip-path:url(#XMLID_7_);fill:url(#SVGID_2_);}
@@ -12,7 +13,7 @@
   .st9{clip-path:url(#XMLID_11_);fill:url(#SVGID_9_);}
   .st10{opacity:0.2;clip-path:url(#XMLID_11_);fill:url(#SVGID_10_);}
 </style>
-<g id="marketing" class="segment">
+<g id="marketing" class="segment" data-rotation="306">
   <g class="segment-bg">
     <defs>
       <polyline id="XMLID_4_" points="178.6,123.4 233.9,47 169.3,0 89.3,0       "/>
@@ -140,7 +141,7 @@
     </g>
   </g>
 </g>
-<g id="prototype" class="segment">
+<g id="prototype" class="segment" data-rotation="234">
   <g class="segment-bg">
     <defs>
       <polyline id="XMLID_5_" points="144,169.5 233.7,198.7 258.4,122.7 233.7,46.7      "/>
@@ -300,7 +301,7 @@
     </g>
   </g>
 </g>
-<g id="simple" class="segment">
+<g id="simple" class="segment" data-rotation="162">
   <g class="segment-bg">
     <defs>
       <polyline id="XMLID_1_" points="89.3,151.5 89.3,245.6 169.3,245.6 233.9,198.6       "/>
@@ -525,7 +526,7 @@
     </g>
   </g>
 </g>
-<g id="full" class="segment">
+<g id="full" class="segment" data-rotation="90">
   <g class="segment-bg">
     <defs>
       <polyline id="XMLID_2_" points="89.3,93.6 0,122.6 24.7,198.6 89.3,245.6       "/>
@@ -692,10 +693,10 @@
     </g>
   </g>
 </g>
-<g id="complex" class="segment">
+<g id="complex" class="segment" data-rotation="18">
   <g class="segment-bg">
     <defs>
-      <polyline id="XMLID_3_" points="144.3,75.8 89.3,0 24.7,46.7 0,122.7       "/>
+      <polyline id="XMLID_3_" points="144.3,75.8 89.3,0 24.7,46.7 0,122.7"/>
     </defs>
     <use xlink:href="#XMLID_3_"  style="overflow:visible;fill:#00AAB5;"/>
     <clipPath id="XMLID_11_">
