--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,7 @@
   <!-- Main CSS: -->
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
 
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script type="text/javascript" src="{{ "/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/js/vendor/jquery-2.1.4.min.js" | prepend: site.baseurl }}" data-no-instant></script>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
