fixed menu issues

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,8 +1,10 @@
 <nav id="main-menu">
-  <a href="#" id="close-menu-link" class="lowercase js-menu-trigger">
-    <i class="icon icon-close"></i>
-    Close
-  </a>
+  <div class="close-menu-wrap max-1200">
+    <a href="#" id="close-menu-link" class="lowercase js-menu-trigger">
+      <i class="icon icon-close"></i>
+      Close
+    </a>
+  </div>
   <div id="menu-inner" class="faux-table">
     <div class="faux-table-cell">
       <ul id="menu-list" class="lowercase fancy-pants-font">
