mobile view layout tweaks

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
   <div class="close-menu-wrap max-1200">
     <a href="#" id="close-menu-link" class="lowercase js-menu-trigger">
       <i class="icon icon-close"></i>
-      Close
+      <span>close</span>
     </a>
   </div>
   <div id="menu-inner" class="faux-table">
