--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="keywords" content="Node.js, JavaScript Development, NodeJS, Ember, Angular, Web design Christchurch, Mobile Apps, Software, Website, development, design, marketing, content management, CMS, advertising">
 
   <!-- Reset Styles: -->
   <link rel="stylesheet" href="{{ "/css/normalize.min.css" | prepend: site.baseurl }}">
@@ -22,5 +23,15 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-1601711-8', 'auto');
+    ga('send', 'pageview');
+  </script>
 
 </head>
