services page bolding and related case studies name/links update

--- a/_includes/other-case-studies.html
+++ b/_includes/other-case-studies.html
@@ -17,14 +17,14 @@
 
   {% if page.casestudyid != 2 %}
   <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
+    <a href="{{ "/case-studies/forward-works-viewer" | prepend: site.baseurl }}" class="item-image">
       <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Forward Works Planner</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Land Information New Zealand</a></h3><br>
-        <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/forward-works-viewer" | prepend: site.baseurl }}">Forward Works Viewer</a></h2>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-viewer" | prepend: site.baseurl }}">Land Information New Zealand</a></h3><br>
+        <a href="{{ "/case-studies/forward-works-viewer" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
       </div>
     </div> <!-- .item-text -->
   </div> <!-- .case-study-item -->
