--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,12 @@
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
 
   <script type="text/javascript" src="{{ "/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" | prepend: site.baseurl }}" data-no-instant></script>
-  <script type="text/javascript" src="{{ "/js/vendor/jquery-2.1.4.min.js" | prepend: site.baseurl }}" data-no-instant></script>
+  <!--[if (!IE)|(gt IE 8)]><!-->
+    <script type="text/javascript" src="{{ "/js/vendor/jquery-2.1.4.min.js" | prepend: site.baseurl }}" data-no-instant></script>
+  <!--<![endif]-->
+  <!--[if lte IE 8]>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <![endif]-->
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
