Add new staff members

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{{ "/css/normalize.min.css" | prepend: site.baseurl }}">
   <!-- /build -->
   <!-- Google Fonts: -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,600,700' rel='stylesheet' type='text/css' data-norem>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,600,700' rel='stylesheet' type='text/css' data-norem>
   <!-- Cheltnhm Font: -->
   <link rel="stylesheet" href="{{ "/fonts/stylesheet.css" | prepend: site.baseurl }}" data-norem>
   <!-- Fontello Icons: -->
