--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -7,22 +7,9 @@
 <script type="text/javascript" src="{{ "/js/concat/jquery.keyframes.min.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/js/concat/jquery.waypoints.min.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/js/concat/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/js/concat/isotope.pkgd.min.js" | prepend: site.baseurl }}"></script>
 <!-- /build -->
-
-<script type="text/javascript" src="{{ "/js/isotope.pkgd.min.js" | prepend: site.baseurl }}" data-no-instant></script>
 
 <!-- build:js /js/main.min.js -->
 <script type="text/javascript" src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 <!-- /build -->
-
-<!-- init pjax/prefetching plugin: -->
-<script type='text/javascript' src="{{ "/js/instantclick.js" | prepend: site.baseurl }}" data-no-instant></script>
-<script data-no-instant>
-  InstantClick.on('change', function() {
-    ga('send', 'pageview', location.pathname + location.search);
-  });
-  $(document).ready(function(){
-    InstantClick.on('change', onChange);
-    InstantClick.init();
-  });
-</script>
