--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -22,18 +22,13 @@
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
   <!-- /build -->
 
-  <script type="text/javascript" src="{{ "/js/modernizr-2.8.3-respond-1.4.2.min.js" | prepend: site.baseurl }}" data-no-instant></script>
-  <!--[if (!IE)|(gt IE 8)]><!-->
-  <script type="text/javascript" src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}" data-no-instant></script>
-  <!--<![endif]-->
-  <!--[if lte IE 8]>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <![endif]-->
+  <script type="text/javascript" src="{{ "/js/modernizr-2.8.3-respond-1.4.2.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
-  <script data-no-instant>
+  <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
