--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1959,6 +1959,9 @@ address {
   line-height: 1;
   margin: 0 0 20px 0;
 }
+.service-text li{
+  text-align: left;
+}
 
 /*-----------------------------------------------------
   Terms and Conditions page
