--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="{{ "/js/concat/jquery.waypoints.min.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/js/concat/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/js/concat/isotope.pkgd.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/js/concat/snap.svg-min.js" | prepend: site.baseurl }}"></script>
 <!-- /build -->
 
 <!-- build:js /js/main.min.js -->
