Fix gulp CSS minify issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -358,11 +358,11 @@ a {
 
 @font-face {
   font-family: 'mediasuite';
-  src: url('../fonts/icons/mediasuite.eot?93625601');
-  src: url('../fonts/icons/mediasuite.eot?93625601#iefix') format('embedded-opentype'),
-       url('../fonts/icons/mediasuite.woff?93625601') format('woff'),
-       url('../fonts/icons/mediasuite.ttf?93625601') format('truetype'),
-       url('../fonts/icons/mediasuite.svg?93625601#mediasuite') format('svg');
+  src: url('../fonts/icon-font/mediasuite.eot?93625601');
+  src: url('../fonts/icon-font/mediasuite.eot?93625601#iefix') format('embedded-opentype'),
+       url('../fonts/icon-font/mediasuite.woff?93625601') format('woff'),
+       url('../fonts/icon-font/mediasuite.ttf?93625601') format('truetype'),
+       url('../fonts/icon-font/mediasuite.svg?93625601#mediasuite') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -400,22 +400,12 @@ a {
   Jiggle Animations:
 ------------------------------------------------------*/
 
-.jiggle,
-.hiring-bubble {
-  transform: scale(1);
+.jiggle:hover {
+  animation: jiggle 750ms ease-in-out 0s alternate;
 }
 
-.jiggle:hover,
-.hiring-bubble:hover {
-  animation-name: jiggle;
-  animation-duration: .75s;
-  animation-direction: alternate;
-  animation-delay: 0;
-  timing-function: ease-in-out;
-}
-
-@-webkit-keyframes jiggle {
-  from { transform: scaleY(1) scaleX(1); }
+@keyframes jiggle {
+  0% { transform: scaleY(1) scaleX(1); }
   10% { transform: scaleY(.98) scaleX(1.02);}
   25% { transform: scaleY(1) scaleX(1);}
   30% { transform: scaleY(1.08) scaleX(.9); }
@@ -433,8 +423,8 @@ a {
   timing-function: ease-in-out;
 }
 
-@-webkit-keyframes alert-jiggle {
-  from { transform: translateY(0); }
+@keyframes alert-jiggle {
+  0% { transform: translateY(0); }
   20% { transform: translateY(-10px);}
   25% { transform: rotate(1.5deg) translateY(-10px)}
   30% { transform: rotate(-1.3deg) translateY(-10px)}
@@ -924,7 +914,7 @@ a {
   bottom: 30px;
   height: 152px;
   width: 148px;
-  z-index: 110;
+  z-index: 99999;
 }
 
 .hiring-bubble {
@@ -2333,10 +2323,13 @@ address {
     width: auto;
   }
 
+  .hiring-bubble-container {
+    transform: translateY(76px);
+  }
+
   .hiring-bubble {
     right: 30px;
     bottom: 50vh;
-    transform: translateY(76px);
   }
 
 }
