--- a/src/css/style.css
+++ b/src/css/style.css
@@ -910,8 +910,9 @@ a {
 
 .hiring-bubble-container {
   position: absolute;
-  right: 30px;
-  bottom: 30px;
+  right: 20px;
+  bottom: 50%;
+  transform: translateY(50%);
   height: 152px;
   width: 148px;
   z-index: 99999;
@@ -1621,6 +1622,7 @@ a.crumb:hover,
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
+  margin-top: 20px;
 }
 
 .people-controls {
@@ -2396,6 +2398,11 @@ address {
   .head:last-of-type {
     text-align: right;
   }
+
+   .hiring-bubble-container {
+     right: 70px;
+     bottom: 30px;
+   }
 
 }
 
@@ -3839,7 +3846,7 @@ address {
     margin-bottom: 55px;
     position: relative;
     width: 33%;
-    height: 300px;
+    height: 380px;
   }
 
   .person-wrap.on {
