--- a/src/css/style.css
+++ b/src/css/style.css
@@ -541,7 +541,6 @@ a {
   width: 100%;
   padding-top: 20px;
   color: #fff;
-  -webkit-transform: translate3d(0px, 0px, 0px);
   transform: translate3d(0px, 0px, 0px);
 }
 
@@ -608,9 +607,6 @@ a {
   overflow: hidden;
   background: #f36d21;
   color: #fff;
-  -webkit-transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
-  -moz-transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
-  -o-transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
   transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
 }
 
@@ -672,9 +668,6 @@ a {
   bottom: 0;
   left: 50%;
   background: rgba(255,255,255,.8);
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
 }
 
@@ -804,7 +797,6 @@ a {
   width: auto;
   height: auto;
   z-index: -100;
-  -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
   background: url(../img/video-overlay.png) no-repeat;
   background-size: cover;
@@ -834,7 +826,6 @@ a {
   /* allow for menu bar */
   padding-top: 100px;
   /* fix z-index issues on panel change */
-  -webkit-transform: translate3d(0px, 0px, 0px);
   transform: translate3d(0px, 0px, 0px);
 }
 
@@ -977,12 +968,12 @@ a {
   left: -8px;
   border-top: 8px solid #fff;
   border-bottom: 8px solid #fff;
-  image-rendering:-webkit-optimize-contrast;
+  image-rendering :-webkit-optimize-contrast;
 }
 
 .js-parallax,
 .js-parallax * {
-  -webkit-transform: translateZ(0) scale(1.0, 1.0);
+  transform: translateZ(0) scale(1.0, 1.0);
 }
 
 #work-panel-content {
@@ -1085,70 +1076,42 @@ a {
 }
 
 .levitate {
-  -webkit-animation: levitate 3s infinite;
-  -moz-animation: levitate 3s infinite;
-  -webkit-transform: rotate(360deg);
-  -webkit-transition: -webkit-transform 0.5s ease-in;
+  animation: levitate 3s infinite;
 }
 
 .wheel-shadow {
   width: 100%;
   max-width: 425px;
-  -webkit-animation: wheel-shadow 3s infinite;
-  -moz-animation: wheel-shadow 3s infinite;
-  -webkit-transform: translateY(-20px);
+  animation: wheel-shadow 3s infinite;
 }
 
-@-webkit-keyframes levitate {
+@keyframes levitate {
   0% {
-    -webkit-transform: translateY(-5px);
-   }
+    transform: translateY(-5px);
+  }
   50% {
-    -webkit-transform: translateY(0px);
-   }
+    transform: translateY(0px);
+  }
   100%{
-    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
   }
 }
 
-@-moz-keyframes levitate {
+@keyframes wheel-shadow {
   0% {
-    -moz-transform: translateY(-5px);
-   }
-  50% {
-    -moz-transform: translateY(3px);
-   }
-  100%{
-     -moz-transform: translateY(-5px);
-  }
-}
-
-@-webkit-keyframes wheel-shadow {
-  0% {
-    -webkit-transform: scale(.9,.95);
+    transform: scale(.9,.95);
     opacity: .8;
    }
   50% {
-    -webkit-transform: scale(1,1);
+    transform: scale(1,1);
     opacity: 1;
    }
   100%{
-    -webkit-transform: scale(.9,.95);
+    transform: scale(.9,.95);
     opacity: .8;
   }
 }
 
-@-moz-keyframes wheel-shadow {
-  0% {
-    -moz-transform: scale(1,1);
-   }
-  50% {
-    -moz-transform: scale(.8,.9);
-   }
-  100%{
-     -moz-transform: scale(1,1);
-  }
-}
 
 /*-----------------------------------------------------
   Home Page: #culture-panel
@@ -1673,14 +1636,11 @@ a.crumb:hover,
   height: 20px;
   border-radius: 100%;
   background: #f36d21;
-  -webkit-transform: scale(0);
   transform: scale(0);
-  -webkit-transition: all 400ms cubic-bezier(0.65, -0.39, 0.32, 1.34);
   transition: all 400ms cubic-bezier(0.65, -0.39, 0.32, 1.34);
 }
 
 .sort-btn.active:after {
-  -webkit-transform: scale(1);
   transform: scale(1);
 }
 
@@ -1758,7 +1718,6 @@ a.crumb:hover,
   line-height: 1;
   color: #ccc;
   transition: opacity 300ms ease;
-  -webkit-animation: rotating 1s linear infinite;
   animation: rotating 1s linear infinite;
 }
 
@@ -1772,9 +1731,6 @@ a.crumb:hover,
   width: auto;
   visibility: hidden;
   opacity: 0;
-  transform: scale(1);
-  -webkit-transform: translateY(30px);
-  -webkit-transition: all 1000ms ease;
   transform: translateY(30px);
   transition: all 1000ms ease;
 }
@@ -1857,81 +1813,64 @@ a.crumb:hover,
 }
 
 .loaded:hover .scale-in {
-  -webkit-animation: scale-in 600ms cubic-bezier(0.25, 0.1, 0.38, 1.42);
   animation: scale-in 600ms cubic-bezier(0.25, 0.1, 0.38, 1.42);
-  -webkit-animation-fill-mode:forwards;
   animation-fill-mode:forwards;
 }
 
 .bio-rotate {
-  -webkit-animation: rotating 4s linear infinite;
   animation: rotating 4s linear infinite;
 }
 
-@-webkit-keyframes scale-in {
+@keyframes scale-in {
   0% {
-    -webkit-transform: scale(0);
     transform: scale(0);
   }
   60% {
-    -webkit-transform: scale(1.2);
     transform: scale(1.2);
   }
   80% {
-    -webkit-transform: scale(.8);
     transform: scale(.8);
   }
   90% {
-    -webkit-transform: scale(1.1);
     transform: scale(1.1);
   }
   100% {
-    -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
 
 @keyframes scale-in {
   0% {
-    -webkit-transform: scale(0);
     transform: scale(0);
   }
   60% {
-    -webkit-transform: scale(1.2);
     transform: scale(1.2);
   }
   80% {
-    -webkit-transform: scale(.8);
     transform: scale(.8);
   }
   90% {
-    -webkit-transform: scale(1.1);
     transform: scale(1.1);
   }
   100% {
-    -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
 
-@-webkit-keyframes rotating {
+@keyframes rotating {
   from {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   to {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 @keyframes rotating {
   from {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   to {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
@@ -3876,7 +3815,6 @@ address {
     height: 100%;
     overflow: hidden;
     opacity: 0;
-    -webkit-transition: opacity 1200ms ease;
     transition: opacity 1200ms ease;
   }
 
