Update case study content, add cruise guide case study to case studies page and jumper links on other case studies

--- a/src/_includes/other-case-studies.html
+++ b/src/_includes/other-case-studies.html
@@ -1,5 +1,20 @@
 <div class="other-case-studies max-760">
 
+  {% if page.casestudyid != 0 %}
+  <div class="case-study-item clearfix">
+    <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
+      <img src="{{ "/img/case-studies/cs-item-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
+    </a>
+    <div class="item-text">
+      <div class="item-text-head">
+        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Cruise Guide</a></h2>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough District Council</a></h3><br>
+        <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+      </div>
+    </div> <!-- .item-text -->
+  </div> <!-- .case-study-item -->
+  {% endif %}
+
   {% if page.casestudyid != 1 %}
   <div class="case-study-item clearfix">
     <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
