--- a/src/_includes/menu.html
+++ b/src/_includes/menu.html
@@ -13,7 +13,11 @@
         {% if p.menutitle %}
         <li><a href="{{ p.url | prepend: site.baseurl }}" class="touch menu-link{% if p.url == page.url %} active{% endif %}">{{ p.menutitle }}</a></li>
         {% endif %}
-        {% if p.menutitle == "Careers"%}
+        {% comment %}
+          Output these hardcoded links after the Culture link in the menu (pages not in loop as they're external to Jekyll)
+        {% endcomment %}
+        {% if p.menutitle == "Culture" %}
+          <li><a href="https://careers.mediasuite.co.nz/" class="touch menu-link">Careers</a></li>
           <li><a href="{{ '/blog/' | prepend: site.baseurl }}" class="touch menu-link">Blog</a></li>
         {% endif %}
       {% endfor %}
