--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4464,3 +4464,10 @@ address {
   }
 
 }
+
+@media screen and (max-height: 500px) {
+  /* Smaller menu font size on shorter view  */
+  .ms-menu-list {
+    font-size: 3.2rem;
+  }
+}
