Ensure menu items are smaller font size on shorter screen height v2

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4466,8 +4466,8 @@ address {
 }
 
 @media screen and (max-height: 500px) {
-  /* Smaller menu font size on shorter view  */
-  .ms-menu-list {
+  /* Force smaller menu font size on shorter view  */
+  #menu-list {
     font-size: 3.2rem;
   }
 }
