--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -7,6 +7,21 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="keywords" content="Node.js, JavaScript Development, NodeJS, Ember, Angular, Web design Christchurch, Mobile Apps, Software, Website, development, design, marketing, content management, CMS, advertising">
 
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:site_name" content="Media Suite">
+  <meta property="og:url" content="https://www.mediasuite.co.nz{{ page.url }}" />
+  {% if page.title %}
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
+  {% else %}
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:description" content="{{ site.description }}">
+  {% endif %}
+  {% if page.image %}
+    <meta property="og:image" content="https://www.mediasuite.co.nz{{ page.image }}">
+  {% endif %}
+  <meta name="twitter:card" content="summary_large_image">
+
   <!-- Reset Styles: -->
   <!-- build:remove -->
   <link rel="stylesheet" href="{{ "/css/normalize.min.css" | prepend: site.baseurl }}">
